<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManageCare</string>
    <string name="title_activity_doctor">Patients</string>
    <string name="title_activity_check_in">Check-In</string>
    <string name="title_activity_dialog">Date and Time picker</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_info_graphic">Patient Info-Graphic</string>
    <string name="title_activity_login">Login</string>
    <string name="title_day_picker">Pick a day when you did it...</string>
    <string name="title_pick_time">Pick a time when you did it...</string>
    <!---->

    <string name="action_settings">Settings</string>
    <string name="action_help">Info</string>
    <string name="action_reenter">Sign in</string>
    <string name="btn_checkin">Check-In</string>
    <string name="btn_ok">OK</string>
    <string name="btn_no">NO</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btnLogin">Login</string>
    <string name="btn_sos">SOS\nNotify Doctor</string>
    <string name="_id">_id</string>
    <string name="dialogMrn">MRN or Licence</string>
    <string name="dialogPasswordHint">Enter password</string>
    <string name="LOGIN_DIALOG">LoginDialog</string>
    <string name="login_dialog_title">Enter to the system</string>
    <string name="network_error_message">Something went wrong, try one more time, please...</string>
    <string name="checkin_saved">Check-In saved, Thank you!</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="sending_result_msg">Thank you, we are sending result to your Doctor...</string>
    <string name="connection_error">Bad connection, try again...</string>
    <string name="wrong_passw_msg">Something incorrect, try again please...</string>
    <string name="welcome_msg">Welcome to ManageCare, </string>
    <!---->
    <string name="first_time_pref">firstTime</string>
    <string name="pref_has_id">hasId</string>
    <string name="pref_mrn">mrn</string>
    <string name="pref_id">id</string>
    <string name="pref_fname">fname</string>
    <string name="pref_lname">lname</string>
    <string name="pref_basic">basic</string>
    <string name="prefs_checkin_first">check_in_first</string>
    <string name="pref_key_enable_alerts">enable_alerts</string>

<!-- URLs-->

    <string name="url_main_server">https://95.85.17.118:8443/</string>
    <string name="url_part_get_data">getdata/</string>
    <string name="url_part_get_patients">getpatients/</string>
    <string name="url_checkin">https://95.85.17.118:8443/getcheckin?pId=</string>
    <string name="url_checkin_send_back">https://95.85.17.118:8443/addanswch?pId=</string>
    <string name="url_send_reg_gcm_id">https://95.85.17.118:8443/mobileid/</string>
    <string name="url_login">https://95.85.17.118:8443/auth</string>
    <string name="url_part_sendmsg">sendmsg/</string>
    <!-- Helpers-->
    <string name="semi_colon">:</string>
    <string name="empty_str"></string>
    <string name="space"> </string>
    <string name="log">ml</string>
    <!---->
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_no_valid_gps_apk">No valid Google Play Services APK found.</string>
    <string name="error_reg_not_found">Registration not found.</string>
    <string name="error_app_ver_changed">App version changed.</string>
    <string name="error_package_name_not_found">Could not get package name: </string>
    <string name="error_patient_not_selected">Patient not selected</string>
    <string name="error">Error: </string>
    <string name="error_must_impl_listener"> must implement FragmentInteractionListener</string>
    <!---->
    <string name="msg_device_registred">Device registered, registration ID=</string>
    <string name="new_line_string"></string>
    <string name="btn_send">Send</string>
    <string name="btn_clear">Clear</string>
    <string name="question_pain">How bad is your mouth pain/sore throat?</string>
    <string name="question_eating">Does your pain stop you from eating/drinking?</string>
    <string name="save_reg_id">Saving regId on app version </string>
    <string name="success_device_signed">Device has been signed in GC Messaging system</string>
    <string name="dl">DL</string>
    <string name="mr">MR</string>
    <string name="is_doctor">isDoctor</string>
    <string name="notification_alert_title">ManageCare Alert!!!</string>
    <string name="answers">answers</string>

    <!---->

    <string name="title_send_message_dialog">Send message to Doctor</string>
    <string name="hint_enter_message">Enter message here</string>
    <string name="alerts">alerts</string>
    <string name="checkin_first">check_in_first</string>
    <string name="checking_last">check_in_last</string>
    <string name="checkins_per_day">checkins_per_day</string>
    <string name="checkin_time">Check-In time: </string>
    <string name="set_schedule">set_schedule</string>
    <string name="intent_action_reboot">android.intent.action.BOOT_COMPLETED</string>
    <string name="settings_default_checkins_per_day">4</string>
    <string name="settings_max_checkins_per_day">24</string>
    <string name="msg_sent">The message has been sent</string>
    <string name="toast_pick_answer">Pick one answer, please...</string>

    <!---->

    <string-array name="eating_answers">
        <item>no</item>
        <item>some</item>
        <item>I can’t eat</item>
    </string-array>
    <string-array name="pain_answers">
        <item>well-controlled</item>
        <item>moderate</item>
        <item>severe</item>
    </string-array>



</resources>
