<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_message"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_message" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_margin="10dp"
            android:id="@+id/btn_send_message_cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:id="@+id/btn_send_message_to_doctor"/>
    </LinearLayout>
</LinearLayout>